--- a/docs/concepts-summary.adoc
+++ b/docs/concepts-summary.adoc
@@ -1,16 +1,16 @@
-= Gitworkflow: Concepts Summary
+# Gitworkflow: Concepts Summary
 :toc: macro
 
 toc::[]
 
-== Introduction
+## Introduction
 
 An earlier article described https://hackernoon.com/how-the-creators-of-git-do-branches-e6fcc57270fb[Gitworkflow]. This
 document expands on some of the concepts in a shorter, more digestible form.
 
-== Concepts
+## Concepts
 
-=== Topic Branches
+### Topic Branches
 
 Topic branches, sometimes called feature branches, are where almost all development happens. Topics represent something
 being worked on, almost always in a branch, like a bug fix, hot fix, or new functionality.
@@ -23,105 +23,105 @@ rg/SP-1234-NewFrobnik
 The initials ease communication by immediately identifying the owner. The issue and description are short but also
 provide useful context.
 
-By branching from `maint` or `master`, we have the flexibility to merge the topic into branches like `next` or `pu`
+By branching from `release` or `main`, we have the flexibility to merge the topic into branches like `beta` or `alpha`
 because those branches will share the branch point as a common ancestor).
 
-If topic B depends on another topic A that has not yet graduated to `master`, topic A may be merged into topic B. This
+If topic B depends on another topic A that has not yet graduated to `main`, topic A may be merged into topic B. This
 complicates interactive branch rebases so this should be avoided when possible, however if necessary, git should handle
 this situation without too much problem.
 
-Smaller bugfixes and features may be merged directly into `maint` or `master` without going through a stabilization
-period in `next` or `pu`. Changes on `maint` are merged upwards into `master`, and changes on `master` are merged
-upwards into `next` and `proposed` (though these branches are more often simply rewound and rebuilt).
+Smaller bugfixes and features may be merged directly into `release` or `main` without going through a stabilization
+period in `beta` or `alpha`. Changes on `release` are merged upwards into `main`, and changes on `main` are merged
+upwards into `beta` and `proposed` (though these branches are more often simply rewound and rebuilt).
 
-=== Integration Branches
+### Integration Branches
 
 The integration branches are described here.
 
-Stable releases are cut from `master`, beta or acceptance test releases from `next`, and alpha or preview releases from
-`pu`. `maint` simply represents fixes to the previous release. The most stable up-to-date code is on `master`.
+Stable releases are cut from `main`, beta or acceptance test releases from `beta`, and alpha or preview releases from
+`alpha`. `release` simply represents fixes to the previous release. The most stable up-to-date code is on `main`.
 
 Integration branches are exactly like any other branch in git. What makes them “special” is solely in how we have
 defined their use.
 
-==== master
+#### main
 
-The `master` branch is:
+The `main` branch is:
 
 * the code that is most up-to-date and stable
 
 and it has the following properties:
 
-* when creating a named new release, it would come from `master`
-* in a continuous deployment scenario, production would always run the tip of `master`
+* when creating a named new release, it would come from `main`
+* in a continuous deployment scenario, production would always run the tip of `main`
 * usually deployed to production, released to users
-* at some point, the tip of `master` is tagged with vX.Y.0
-* the `maint` branch is always based on some commit on `master`
+* at some point, the tip of `main` is tagged with vX.Y.0
+* the `release` branch is always based on some commit on `main`
 * never rewound or rebased, *always safe to base topics on*
 ** you may want to add a check in your git server to ensure force push does not happen on this branch
-* new topics are almost always based on `master`
-* usually contains all of `maint` (and must before a new release, since otherwise there are changes currently in prod
+* new topics are almost always based on `main`
+* usually contains all of `release` (and must before a new release, since otherwise there are changes currently in prod
 that won’t be included in the new release)
 
-==== next
+#### beta
 
-The `next` branch is:
+The `beta` branch is:
 
 * the code currently being developed and stabilized for release
 
 and it has the following properties:
 
-* code merged to `next` is generally in fairly good shape, though perhaps there are regressions or other non-obvious
+* code merged to `beta` is generally in fairly good shape, though perhaps there are regressions or other non-obvious
 issues
 * usually deployed to a testing environment
-at the beginning of every development cycle, rewound to `master`, but otherwise never rewound
-* usually contains all of `master` i.e. usually based on the head of `master`
-* when a release is made, if a topic branch currently in `next` is not stable enough promotion to `master`, it is
-simply not merged to `master` -- instead, it is merged to the next iteration of `next`
-* may be rewound to `master` at any time, and rebuilt with topics still in `next` -- but usually after a release
+at the beginning of every development cycle, rewound to `main`, but otherwise never rewound
+* usually contains all of `main` i.e. usually based on the head of `main`
+* when a release is made, if a topic branch currently in `beta` is not stable enough promotion to `main`, it is
+simply not merged to `main` -- instead, it is merged to the next iteration of `beta`
+* may be rewound to `main` at any time, and rebuilt with topics still in `beta` -- but usually after a release
 * it is *never* merged into any another branch
-* new topics are not usually based on `next`
+* new topics are not usually based on `beta`
 ** one exception: if a topic is not expected to be stable for the next release, and the creator understands that
-the branch will need to be rebased when `next` is rewound and rebuilt, this is ok and may result in fewer conflicts
-during future rebase than if the topic started from `master`
+the branch will need to be rebased when `beta` is rewound and rebuilt, this is ok and may result in fewer conflicts
+during future rebase than if the topic started from `main`
 
-==== pu
+#### alpha
 
-The `pu` branch is:
+The `alpha` branch is:
 * “proposed” updates for temporary analysis, experimentation, or initial testing/review of one or more features
-** anything else that doesn’t yet belong in `next`
+** anything else that doesn’t yet belong in `beta`
 
 and it has the following properties:
 
 * to test / provide early warning whether the unmerged topic branches integrate cleanly -- if not, some communication
 to coordinate changes on topics is necessary
-* may be rewound to `master` at any time -- but usually once every day or every second day
+* may be rewound to `main` at any time -- but usually once every day or every second day
 * it is *never* merged into any another branch
-* new topics are not usually based on `pu`
+* new topics are not usually based on `alpha`
 
-==== maint (and maint-X.Y)
+#### release (and release-X.Y)
 
-The `maint` branch is:
+The `release` branch is:
 
 * code that is the newest maintained production release
 
-The `maint-X.Y` branches are:
+The `release-X.Y` branches are:
 
 * code that are older, but still maintained, production releases
 
 and they have the following properties:
 
 * usually deployed directly into production, perhaps with some but not extensive testing elsewhere
-* after release of `vX.Y.0` is made, `maint` is set to that commit
-* releases of `vX.Y.n` are made from `maint` if `X.Y` is current, or `maint-X.Y` if `X.Y` is an older maintained release
+* after release of `vX.Y.0` is made, `release` is set to that commit
+* releases of `vX.Y.n` are made from `release` if `X.Y` is current, or `release-X.Y` if `X.Y` is an older maintained release
 * never rewound or rebased, *always safe to base topics on*
 ** you may want to add a check in your git server to ensure force push does not happen on this branch, with an exception
-for when the `maint` branch is moved to the new tip of `master` after a release
-* hotfix topics are merged to `maint` directly
-* new topics may be based on `maint` (or `maint-X.Y`) if the fix in the topic needs to be applied to that older release
-* can be merged to `master` to propagate fixes forward
+for when the `release` branch is moved to the new tip of `main` after a release
+* hotfix topics are merged to `release` directly
+* new topics may be based on `release` (or `release-X.Y`) if the fix in the topic needs to be applied to that older release
+* can be merged to `main` to propagate fixes forward
 
-== The Life of a Topic Branch in Gitworkflow
+## The Life of a Topic Branch in Gitworkflow
 
 Development on a topic branch might go something like the following. There are a lot of variations on this basic
 structure -- this is just an example.
@@ -132,18 +132,18 @@ gitworkflow -- just enabled by it.
 . Create a topic branch starting from master
 . commit - commit - commit
 . Push to a remote branch as necessary to back up the work or facilitate discussions with colleagues
-. `merge --no-ff` topic to the `pu` integration branch (manually or scripted and scheduled)
-.. check for conflicts and do initial review/testing of `pu` build
+. `merge --no-ff` topic to the `alpha` integration branch (manually or scripted and scheduled)
+.. check for conflicts and do initial review/testing of `alpha` build
 . Cleanup topic history with an interactive rebase
 . Force push to origin topic branch
-. `merge --no-ff` topic to a rebuilt `pu` integration branch (manually or scripted and scheduled)
+. `merge --no-ff` topic to a rebuilt `alpha` integration branch (manually or scripted and scheduled)
 . Code review
 . Fix code review comments in separate commits
 .. Don't rebase to simplify work of reviewer's so they know what you have changed, but use `--squash` and `--fixup`
 liberally
 . After review is completed, interactively rebase the squash and fixup commits to cleanup the topic history
 .. Use `--autosquash` to apply the fixup/squash commits
-. `merge --no-ff` to the `next` integration branch
+. `merge --no-ff` to the `beta` integration branch
 . Test, validate and change the topic as necessary
-. Merge topic branch to `master` (when release done), tag `master` with release version
+. Merge topic branch to `main` (when release done), tag `main` with release version
 . Remove the topic branch locally and remotely
